// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DeveloperMessage should render both messages when both are missing 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
  -webkit-margin-start: 4px;
  margin-inline-start: 4px;
  -webkit-margin-end: 4px;
  margin-inline-end: 4px;
  margin-bottom: 2px;
}

.emotion-1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-top: 2px;
  padding-bottom: 2px;
  -webkit-padding-start: 3px;
  padding-inline-start: 3px;
  -webkit-padding-end: 3px;
  padding-inline-end: 3px;
  border-radius: md;
  font-size: xs;
}

.emotion-2 {
  display: inherit;
  width: 14px;
  height: 14px;
}

.emotion-3 {
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: inline;
}

.emotion-5 {
  font-weight: semibold;
}

.emotion-7 {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  -webkit-margin-start: 2px;
  margin-inline-start: 2px;
  -webkit-margin-end: 2px;
  margin-inline-end: 2px;
}

<div
  class="chakra-stack emotion-0"
>
  <div
    class="chakra-alert emotion-1"
    data-status="warning"
    role="alert"
  >
    <span
      class="chakra-alert__icon emotion-2"
      data-status="warning"
    >
      <svg
        class="chakra-icon emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="chakra-alert__desc emotion-4"
      data-status="warning"
    >
      <span
        class="chakra-text emotion-5"
      >
        Missing Config:
      </span>
       
      <a
        class="chakra-link emotion-6"
        href="https://github.com/onflow/fcl-discovery/blob/master/README.md#configuration"
        rel="noopener"
        target="_blank"
      >
        Set app title and icon 
        <svg
          class="chakra-icon emotion-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14L21 3"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
  <div
    class="chakra-alert emotion-1"
    data-status="info"
    role="alert"
  >
    <span
      class="chakra-alert__icon emotion-2"
      data-status="info"
    >
      <svg
        class="chakra-icon emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="chakra-alert__desc emotion-4"
      data-status="info"
    >
      <span
        class="chakra-text emotion-5"
      >
        Mobile Wallets:
      </span>
       
      Set 
      <code>
        walletconnect.projectId
      </code>
       in FCL config.
       
      <a
        class="chakra-link emotion-6"
        href="https://developers.flow.com/build/tools/clients/fcl-js/discovery"
        rel="noopener"
        target="_blank"
      >
        Learn more 
        <svg
          class="chakra-icon emotion-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14L21 3"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Component: DeveloperMessage should render nothing when no props are passed 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
  -webkit-margin-start: 4px;
  margin-inline-start: 4px;
  -webkit-margin-end: 4px;
  margin-inline-end: 4px;
  margin-bottom: 2px;
}

<div
  class="chakra-stack emotion-0"
/>
`;

exports[`Component: DeveloperMessage should render the missing WalletConnect message 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
  -webkit-margin-start: 4px;
  margin-inline-start: 4px;
  -webkit-margin-end: 4px;
  margin-inline-end: 4px;
  margin-bottom: 2px;
}

.emotion-1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-top: 2px;
  padding-bottom: 2px;
  -webkit-padding-start: 3px;
  padding-inline-start: 3px;
  -webkit-padding-end: 3px;
  padding-inline-end: 3px;
  border-radius: md;
  font-size: xs;
}

.emotion-2 {
  display: inherit;
  width: 14px;
  height: 14px;
}

.emotion-3 {
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: inline;
}

.emotion-5 {
  font-weight: semibold;
}

.emotion-7 {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  -webkit-margin-start: 2px;
  margin-inline-start: 2px;
  -webkit-margin-end: 2px;
  margin-inline-end: 2px;
}

<div
  class="chakra-stack emotion-0"
>
  <div
    class="chakra-alert emotion-1"
    data-status="info"
    role="alert"
  >
    <span
      class="chakra-alert__icon emotion-2"
      data-status="info"
    >
      <svg
        class="chakra-icon emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="chakra-alert__desc emotion-4"
      data-status="info"
    >
      <span
        class="chakra-text emotion-5"
      >
        Mobile Wallets:
      </span>
       
      Set 
      <code>
        walletconnect.projectId
      </code>
       in FCL config.
       
      <a
        class="chakra-link emotion-6"
        href="https://developers.flow.com/build/tools/clients/fcl-js/discovery"
        rel="noopener"
        target="_blank"
      >
        Learn more 
        <svg
          class="chakra-icon emotion-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14L21 3"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Component: DeveloperMessage should render the missing app config message 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
  -webkit-margin-start: 4px;
  margin-inline-start: 4px;
  -webkit-margin-end: 4px;
  margin-inline-end: 4px;
  margin-bottom: 2px;
}

.emotion-1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-top: 2px;
  padding-bottom: 2px;
  -webkit-padding-start: 3px;
  padding-inline-start: 3px;
  -webkit-padding-end: 3px;
  padding-inline-end: 3px;
  border-radius: md;
  font-size: xs;
}

.emotion-2 {
  display: inherit;
  width: 14px;
  height: 14px;
}

.emotion-3 {
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  height: 100%;
  width: 100%;
}

.emotion-4 {
  display: inline;
}

.emotion-5 {
  font-weight: semibold;
}

.emotion-7 {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: currentColor;
  vertical-align: middle;
  -webkit-margin-start: 2px;
  margin-inline-start: 2px;
  -webkit-margin-end: 2px;
  margin-inline-end: 2px;
}

<div
  class="chakra-stack emotion-0"
>
  <div
    class="chakra-alert emotion-1"
    data-status="warning"
    role="alert"
  >
    <span
      class="chakra-alert__icon emotion-2"
      data-status="warning"
    >
      <svg
        class="chakra-icon emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="chakra-alert__desc emotion-4"
      data-status="warning"
    >
      <span
        class="chakra-text emotion-5"
      >
        Missing Config:
      </span>
       
      <a
        class="chakra-link emotion-6"
        href="https://github.com/onflow/fcl-discovery/blob/master/README.md#configuration"
        rel="noopener"
        target="_blank"
      >
        Set app title and icon 
        <svg
          class="chakra-icon emotion-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14L21 3"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</div>
`;
